kubeconfig/eshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop
spec:
  type: NodePort
  ports:
  - name: "eshop-service"
    port: 5106
    targetPort: 80
    nodePort: 31010
  selector:
    app: eshop
