kubeconfig/eshop-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eshop-ingress
  namespace: 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
   - http:
      paths:
      - path: /
        backend:
          serviceName: eshop
          servicePort: 5106
